--- a/templates/about/index.ejs
+++ b/templates/about/index.ejs
@@ -15,41 +15,30 @@
   <div class="blankHM"></div>
   <%- include(`${templatePath}/shared/base_greeting`,{greetingTxt:`👋🏻 hi there!`}) %>
 
-  <%- include(`${templatePath}/shared/comp_titleWeb`,{
-    ShowIntroTitle1:true,
-    ShowIntroTitle2:false,
-    ShowIntroTitle3:false,
-    ShowIntroTitle4:false,
-    introTitle1: `I'm interested in streamlining UX for Enhanced Business Impact. I implifying Complex Interfaces for Optimal User Engagement`,
-    divider1: false, 
-    introTitle2: ``,
-    divider2: false, 
-    introTitle3: ``,
-    divider3: false, 
-    introTitle4: ``
-  }) %>
   <div class="wrapper">
-    <div class="Grid Grid--full Grid--gutters">
+    <div class="Grid Grid--gutters">
       <div class="Grid-cell">
-        <div class="element">
-          <div class="rowToColumn centerVH">
-            <div class="widthMax">
-              <div class="Grid-cell">
-                <h3>As a UX designer, I possess a diverse range of skills and have gained experience in
-                  startup environments. I am fully involved in every aspect of the design process and continuously
-                  aim to create seamless user experiences that align with business objectives. My approach emphasizes
-                  simplicity, using the fewest design elements necessary to address core issues effectively.</h3>
-                <h3>My fascination with craftsmanship extends beyond just UX. It is evident both in the art
-                  of crafting user-centric interfaces and in appreciating the finer details of everyday life.
-                </h3>
-                <h3>I take pleasure in immersing myself in new technologies. Doing so not only fosters
-                  smoother collaboration with developers but also deepens my understanding of design, ultimately
-                  driving productivity.</h3>
-              </div>
+        <div class="row">
+          <div class="widthMax">
+            <div class="element">
+              <strong>
+                <div class="intro aos-init aos-animate" data-aos="fade-up">           
+                  <h1>I'm interested in streamlining workflows, improving business efficiency, and increasing consumer engagement. </h1>
+                </div>
+              </strong>
             </div>
-            <div class="paddingleft">
+          </div>
+          <div class="paddingleft">
+            <div class="element">
               <div class="widthFitContent">
-                <img class="widthS" src="/about/me.jpg" alt="icon arrow">
+                <div class="dropdownSM">
+                  <img title="Share" class="iconS hoverGrey300 paddingM borderRadiusMax dropbtn" src="/icon/share.svg" alt="Share">
+                  <div class="dropdownSM-content">
+                    <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me" target="_blank">Share
+                      on LinkedIn</a>
+                    <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me&amp;media=https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_mobile.svg&amp;description=Skilled%20UX%20Designer%20for%20B2B%20Solutions%20%26%20Consumer%20Apps%20-%20Vicky%20Wang" target="_blank">Share on Pinterest</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -57,7 +46,23 @@
       </div>
     </div>
   </div>
+  <div class="wrapper">
+    <div class="Grid Grid--full Grid--gutters u-textCenter">
+      <div class="Grid-cell">
+        <div class="element">
+          <img class="widthS" src="/about/me.jpg" alt="icon arrow">
 
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="blankHXS"></div>
+  <div class="carouselLogoBlurContainer">
+    <div class="carouselLogoBlur">
+      <div class="logos"></div>
+    </div>
+
+  </div>
 
   <!--Arrow subtitle-->
   <%- include('../shared/comp_textualElements_arrow', {message: 'Method & Importance' }) %>
