--- a/templates/architecture/index.ejs
+++ b/templates/architecture/index.ejs
@@ -18,7 +18,7 @@
     ShowIntroTitle2:false,
     ShowIntroTitle3:false,
     ShowIntroTitle4:false,
-    introTitle1: `Crafting Spaces & Forms: Insights from My M.Arch at UC Berkeley`,
+    introTitle1: `Crafting spaces & forms: insights from My M.Arch at UC Berkeley`,
     divider1: false, 
     introTitle2: ``,
     divider2: false, 
