--- a/templates/blog/index.ejs
+++ b/templates/blog/index.ejs
@@ -18,7 +18,7 @@
       ShowIntroTitle2:false,
       ShowIntroTitle3:false,
       ShowIntroTitle4:false,
-      introTitle1: `Embarking on a UX Design Expedition with Vicky`,
+      introTitle1: `Embarking on a UX Design expedition with Vicky`,
       divider1: false, 
       introTitle2: `Insights & Innovations`,
       divider2: ``, 
