--- a/templates/photography/index.ejs
+++ b/templates/photography/index.ejs
@@ -18,7 +18,7 @@
     ShowIntroTitle2:false,
     ShowIntroTitle3:false,
     ShowIntroTitle4:false,
-    introTitle1: `Capturing the Essence of the Natural World: A Photographic Journey
+    introTitle1: `Capturing the essence of the natural world: a photographic journey
 
 `,
     divider1: false, 
