--- a/templates/resume/index.ejs
+++ b/templates/resume/index.ejs
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" class="colorBgVW">
 <!--Head-->
-<%- include(`${templatePath}/shared/head`, {SEO:false, Title:'Work Sample by Vicky Wang', description:'',
-  pageURL:'/worksamples/BYP_LH_wsbeebr', thumbnailImgURL: 'vickywang_web.png' }) %>
+<%- include(`${templatePath}/shared/head`, {SEO:true, Title:`Vicky's Resume`, 
+  description:`I'm a UX Designer focused on bridging efficiency and engagement in SaaS, administrative Interfaces, and user-Driven applications`, 
+  pageURL:'', thumbnailImgURL: 'vickywang_web.png'
+  }) %>
 <!--Head-->
 
 <body>
@@ -32,7 +34,7 @@
 
     <div class="wrapper colorBgWhie shadowBox">
       <div class="marginM">
-        <div class="blankHS"></div>
+        <div class="blankHXS"></div>
 
 
         <div class="Grid Grid--gutters Grid--full">
@@ -41,35 +43,49 @@
               <img class="widthS" src="Wordmark_Txt.svg" alt="Wordmark">
             </div>
           </div>
-
-
         </div>
 
         <div class="Grid Grid--gutters Grid--1of3">
 
           <div class="Grid-cell">
+
+
             <div class="element">
               <h3> <strong class="colorVW"> EDUCATION</strong> </h3>
 
-            </div>
-
-            <div class="element">
               <h5><strong>University of California, Berkeley </strong></h5>
               <h6 class="textItalic"> August 2015 - May 2019</h6>
-              <h6 class="textItalic">Master of Architecture Graduated May 2019</h6>
+              <div class="blankHXXS"></div>
+
+
               <h5>College of Environmental Design, 3-year Program</h5>
-              <h5>Architecture and Building Science/Technology </h5>
+              <h5>Master of Architecture </h5>
+              <h5>Architecture & Building Science/Technology </h5>
+
             </div>
             <div class="element">
               <h5> <strong>Beijing University of Technology </strong> </h5>
               <h6 class="textItalic"> September 2009 - July 2013</h6>
+              <div class="blankHXXS"></div>
+
               <h5>Bachelor of Art </h5>
               <h5> Art &amp; Design &amp; Landscape Design </h5>
             </div>
+            <div class="element">
+              <h5> <strong>Google UX Design Professional Certificate </strong> </h5>
+              <h6 class="textItalic"> Online class, Completed August 2021</h6>
+              <div class="blankHXXS"></div>
 
+              <h5>Google UX certificate on Coursera</h5>
+
+
+
+            </div>
             <div class="element">
               <h5> <strong>Codecademy </strong> </h5>
               <h6 class="textItalic"> March - May 2023</h6>
+              <div class="blankHXXS"></div>
+
               <h5>Learn User Research: Generative</h5>
               <h5>Learn Design Thinking: Ideation</h5>
               <h5>Learn Interaction Design</h5>
@@ -83,9 +99,53 @@
               <h6 class="textItalic"> March 2023 - Present</h6>
 
               <h5>Front-End Engineer </h5>
+            </div>
 
+
+
+            <div class="element">
+
+              <h3> <strong class="colorVW"> SKILLS</strong> </h3>
+              <h5> <strong>Design & Research</strong> </h5>
+              <h5>User-Centered Design (UCD)</h5>
+              <h5>Wireframing &amp; Prototyping</h5>
+              <h5>User Research & Interviews              </h5>
+              <h5>Information Architecture</h5>
+              <h5>Usability Testing & Heuristic Evaluation              </h5>
+              <h5>Interaction Design</h5>
+              <h5>Responsive and Adaptive Design</h5>
+              <h5>Visual Design</h5>
+
+              <h5>Project Management & Business Acumen </h5>
+              <h5>Design Research & Data Analysis              </h5>
+              <h5>Surveys & Questionnaires              </h5>
+              <h5>User Personas & Journey Mapping              </h5>
 
             </div>
+
+   
+            <div class="element">
+              <h5> <strong> Technical Skills</strong> </h5>
+              <h5> HTML/CSS/JavaScript</h5>
+
+              <h5> EJS(Embedded JavaScript templates)</h5>
+              <h5> jQuery</h5>
+
+
+              <h5> JavaScript, EJS(Embedded JavaScript templates), jQuery </h5>
+
+            </div>
+            <div class="element">
+              <h5> <strong>3D Design & Fabrication Tools</strong> </h5>
+              <h5> Unity </h5>
+              <h5> 3Dmax Studio, Rhino, SketchUp </h5>
+              <h5> Grasshopper, Ladybug, DIVA </h5>
+              <h5> 3D Printing </h5>
+              <h5> 3D Scanner (NextEngine 3D) </h5>
+              <h5> CNC (Techno Isel 3-axis CNC router) </h5>
+              <h5> Laser Cutter, Blade Cutter (Zund S3 Digital) </h5>
+            </div>
+
           </div>
 
 
@@ -94,33 +154,50 @@
               <h3><strong class="colorVW"> EXPERIENCE</strong></h3>
               <h5><strong>BookYourPet | UI/UX Designer </strong></h5>
               <h6 class="textItalic">Oct. 2021 - Present, Full-time Contractor</h6>
+              <div class="blankHXXS"></div>
 
               <ul>
                 <li class="listCircle">Spearheaded the enhancement of key web app functionalities, including appointment scheduling, team management, and payment processes, achieving a 10% increase in booking conversions and a 36% growth in completed appointments.</li>
+                <div class="blankHXXS"></div>
+
                 <li class="listCircle">Optimized the account setup workflow in the web app, reducing setup duration by 52% through targeted improvements in the booking system.
                 </li>
-                <li class="listCircle">Engaged in collaborative planning and design decision-making with a cross-functional team, contributing significantly to the development and refinement of the product roadmap.
+                <div class="blankHXXS"></div>
+
+                <li class="listCircle">Engaged in collaborative planning and design decision-making with a cross-functional team, contributing significantly to the development and refinement of the product roadmap using collaboration tools like Trello and Slack.
                 </li>
-                <li class="listCircle">Led comprehensive usability testing, conducted user interviews, and performed competitive analysis, working closely with stakeholders and potential users to continually enhance the user experience.</li>
+                <div class="blankHXXS"></div>
+
+                <li class="listCircle">Led comprehensive usability testing, conducted user interviews, and performed competitive analysis using analytics tools such as Posthog, working closely with stakeholders and potential users to continually enhance the user experience.</li>
               </ul>
             </div>
             <div class="element">
 
               <h5><strong>LASO Health | Product Designer </strong></h5>
               <h6 class="textItalic">Sep. 2023 - Jan. 2024, Contractor</h6>
+              <div class="blankHXXS"></div>
+
 
               <ul>
                 <li class="listCircle">Designed an Admin Panel focused on user management, integrating advanced features and functionalities based on insights derived from extensive UX research and the existing B2B platform, with an emphasis on Enhanced User Management, Advanced Data Accessibility, and Informed Decision-Making to cater to LASO's diverse user base.</li>
+                <div class="blankHXXS"></div>
+
                 <li class="listCircle">Developed a cost-benefit calculator focused on maximizing customer savings and boosting subscription growth.
                 </li>
+                <div class="blankHXXS"></div>
+
                 <li class="listCircle">Revitalized the design system for both mobile and web applications, catering to consumer and B2B audiences, and enhancing the previous framework.
                 </li>
+                <div class="blankHXXS"></div>
+
                 <li class="listCircle">Crafted responsive product pages and updated content, informed by findings from a dedicated user research case study.</li>
               </ul>
             </div>
             <div class="element">
               <h5><strong>Modernized Mobile LLC | UX Designer </strong></h5>
               <h6 class="textItalic">June. 2023 - Aug.2023, Contractor</h6>
+              <div class="blankHXXS"></div>
+
               <ul>
                 <li class="listCircle">Created a tablet-based admin panel for the 'Clean Spaces' app, mirroring the features and functions of the existing consumer-focused mobile application.</li>
               </ul>
@@ -128,84 +205,74 @@
             <div class="element">
               <h5><strong>VW Studio | Freelancer </strong></h5>
               <h6 class="textItalic">Aug. 2020 - Present, Owner</h6>
+              <div class="blankHXXS"></div>
+
               <ul>
                 <li class="listCircle">Designed and implemented a portfolio website from scratch by using HTML/CSS/JavaScript. deployed on AWS. Used GitHub for version control </li>
               </ul>
+              <div class="blankHXXS"></div>
+
               <ul>
                 <li class="listCircle">Updated and maintained the UI components and responsive grid of the design system for this site. </li>
               </ul>
             </div>
-          </div>
-        </div>
-        <div class="Grid Grid--gutters Grid--full">
-          <div class="Grid-cell">
+            <div class="blankHXS"></div>
+
+
+            <h3><strong class="colorVW"> ARCHITECTURAL DESIGN</strong></h3>
+
             <div class="element">
-              <h3 class="centerVer">
-                <strong class="colorVW"> SKILLS</strong>
-              </h3>
+              <h5><strong>Buro OS | Architectural Designer </strong></h5>
+              <h6 class="textItalic">Aug. 2017 - Jul.2018</h6>
+              <div class="blankHXXS"></div>
+
+              <ul>
+                <li class="listCircle">Main tasks at Buro OS are modifying building massing, updating design packages, cooperating visualization teams, and producing 2d graphics and 3d digital models.
+                </li>
+              </ul>
+
+            </div>
+
+            <div class="element">
+              <h5><strong>In Design Studio | Summer Intern </strong></h5>
+              <h6 class="textItalic">May. 2017 - Aug.2017</h6>
+              <div class="blankHXXS"></div>
+
+              <ul>
+                <li class="listCircle">Conducted zoning code research 
+                </li>
+                <li class="listCircle">Produced elevation, section and details documents
+                </li>
+              </ul>
+
+            </div>
+
+            <div class="element">
+              <h5><strong>PDI Design Group | Architectural Designer </strong></h5>
+              <h6 class="textItalic">Dec. 2013 - Jul.2015</h6>
+              <div class="blankHXXS"></div>
+
+              <ul>
+                <li class="listCircle">Produced digital model and renderings. 
+                </li>
+                <li class="listCircle">Generated building materials palette for facade updates
+                </li>
+              </ul>
+
+            </div>
+            <div class="element">
+              <h5><strong>Do Union | Designer </strong></h5>
+              <h6 class="textItalic">Jul. 2010 - May.2012</h6>
+              <div class="blankHXXS"></div>
+
+
+
             </div>
           </div>
         </div>
 
-        <div class="Grid Grid--gutters Grid--cols-3">
-          <div class="Grid-cell">
 
-            <div class="element">
-              <h5> <strong>Design Skills</strong> </h5>
-              <h5>User-Centered Design (UCD)</h5>
-              <h5>Wireframing &amp; Prototyping</h5>
-              <h5>User Research</h5>
-              <h5>Information Architecture</h5>
-              <h5>Usability Testing</h5>
-              <h5>Interaction Design</h5>
-              <h5>Responsive and Adaptive Design</h5>
-              <h5>Visual Design</h5>
-              <h5>Analytical Skills</h5>
-              <h5>Project Management</h5>
-              <h5>Business Acumen</h5>
-            </div>
 
-          </div>
-          <div class="Grid-cell">
-
-            <div class="element">
-              <h5> <strong> Design Research </strong> </h5>
-              <h5>User Interviews </h5>
-              <h5>Surveys &amp; Questionnaires</h5>
-
-              <h5>Usability Testing</h5>
-              <h5>User Personas</h5>
-              <h5>Journey Mapping</h5>
-              <h5>Heuristic Evaluation</h5>
-              <h5>Data Analysis</h5>
-            </div>
-            <div class="element">
-              <h5> <strong> Technical Skills</strong> </h5>
-              <h5> HTML, CSS,</h5>
-              <h5> JavaScript, EJS(Embedded JavaScript templates), jQuery </h5>
-
-            </div>
-
-          </div>
-
-          <div class="Grid-cell">
-
-            <div class="element">
-              <h5> <strong>3D Design Tools </strong> </h5>
-              <h5> 3Dmax Studio, Rhino, SketchUp </h5>
-              <h5> Grasshopper, Ladybug, DIVA </h5>
-              <h5> Unity </h5>
-            </div>
-            <div class="element">
-              <h5> <strong>Fabrication</strong> </h5>
-              <h5> 3D Printing </h5>
-              <h5> 3D Scanner (NextEngine 3D) </h5>
-              <h5> CNC (Techno Isel 3-axis CNC router) </h5>
-              <h5> Laser Cutter, Blade Cutter (Zund S3 Digital) </h5>
-            </div>
-          </div>
-
-        </div>
         <div class="blankHS"></div>
 
       </div>
