--- a/templates/glorify/index.ejs
+++ b/templates/glorify/index.ejs
@@ -259,13 +259,14 @@
       </div>
     </div>
 
-
-    <div class="Grid Grid--full Grid--gutters wrapper u-textCenter">
-      <div class="Grid-cell">
-        <div class="element">
-          <img class="iconXS moveUpDown" src="Note_Arrow.svg" alt="Pause">
-          <p class="specialTextDemo colorGLORIFYGreen">Hover to pause or navigate through the slideshow
-          </p>
+    <div class="wrapper">
+      <div class="Grid Grid--full Grid--gutters u-textCenter">
+        <div class="Grid-cell">
+          <div class="element">
+            <img class="iconXS moveUpDown" src="Note_Arrow.svg" alt="Pause">
+            <p class="specialTextDemo colorGLORIFYGreen">Hover to pause or navigate through the slideshow
+            </p>
+          </div>
         </div>
       </div>
     </div>
@@ -4946,80 +4947,9 @@
 
 
 
-  <div class="blankHM"></div>
-
-  <!-- Arrow -->
-  <div class="wrapper">
-    <div class="element">
-      <h2 class="tArrow">Skills & Experiences <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
-      </h2>
-    </div>
-  </div>
-  <!-- Arrow -->
-  <div class="blankHM"></div>
-
-  <div class="Grid Grid--full Grid--gutters u-textCenter">
-    <ul class="tags" id="TagsCloud">
-      <li class="tag"><span class="box"> User-centered Design</span></li>
-
-      <li class="tag"><span class="box"> Experience Design</span></li>
-      <li class="tag"><span class="box"> User Experience Design </span></li>
-      <li class="tag"><span class="box"> User Interface Design</span></li>
-      <li class="tag"><span class="box"> Interaction Design</span></li>
-
-      <li class="tag"><span class="box"> Product Design</span></li>
-      <li class="tag"><span class="box"> Service Design</span></li>
-
-      <li class="tag"><span class="box"> Design Thinking</span></li>
-      <li class="tag"><span class="box"> Surveys &#38; Questionnaires</span></li>
-      <li class="tag"><span class="box"> Journey Mapping </span></li>
-      <li class="tag"><span class="box"> Data Analysis </span></li>
 
 
 
-      <li class="tag"><span class="box"> Responsive &#38; Adaptive Design</span></li>
-      <li class="tag"><span class="box"> Web Application Design</span></li>
-      <li class="tag"><span class="box"> Design System</span></li>
-      <li class="tag"><span class="box"> Graphic Design</span></li>
-
-      <li class="tag"><span class="box"> UX Research</span></li>
-      <li class="tag"><span class="box"> Design Research</span></li>
-
-      <li class="tag"><span class="box"> Design Research</span></li>
-      <li class="tag"><span class="box"> Collaborative Problem Solving</span></li>
-      <li class="tag"><span class="box"> Concept Testing</span></li>
-      <li class="tag"><span class="box"> Usability Testing</span></li>
-      <li class="tag"><span class="box"> Wireframing &#38; Prototyping</span></li>
-
-      <li class="tag"><span class="box"> SaaS Application Design</span></li>
-      <li class="tag"><span class="box"> B2B Application Design</span></li>
-      <li class="tag"><span class="box"> Consumer-Facing Design</span></li>
-
-
-      <li class="tag"><span class="box"> Figma</span></li>
-      <li class="tag"><span class="box"> Adobe CS </span></li>
-      <li class="tag"><span class="box"> 3D Modeling</span></li>
-
-      <li class="tag"><span class="box">HTML</span></li>
-      <li class="tag"><span class="box">CSS</span></li>
-      <li class="tag"><span class="box">JavaScript</span></li>
-      <li class="tag"><span class="box">GitHub</span></li>
-
-    </ul>
-  </div>
-
-  <!-- message -->
-  <div class="blankHL"></div>
-  <div class="Grid Grid--full Grid--gutters u-textCenter">
-    <div class="Grid-cell">
-      <h4 class="element">Thanks for stopping by! Hop over to my site for more stuff&#33;</h4>
-      <a href="https://vickywang.me" class=""><img class="widthXS" src="../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
-
-    </div>
-  </div>
-  <div class="blankHL"></div>
-
-  <!-- message -->
 
 
 
@@ -5036,139 +4966,17 @@
     <div id="modal-caption" class="modal-caption"></div>
   </div>
   <!-- The Modal -->
-  <!--back to top-->
-  <button id="myBtn" title="Back to top">
-    <div id="dad">
-      <div id="bro">
-        <img id="bottom-arrow" src="../icon/arrow-top.svg" alt="back to top">
-      </div>
-      <div id="sis">
-        <h4>TOP</h4>
-      </div>
-    </div>
-  </button>
-  <!--back to top-->
-  <!--footer-->
-  <footer class="GreyBg100">
-
-    <div class="blankHS"></div>
-    <div class="wrapper">
-      <div class="element">
-
-        <div class="Grid Grid--gutters Grid--1of3">
-          <div class="Grid-cell">
-
-            <a href="/" class=""><img class="widthXXS" src="../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
-            <div class="blankHXS"></div>
-
-            <div class="Grid Grid--gutters">
-              <div class="ClipboardBoxIconOnly">
-                <button class="ClipboardIconOnly">
-                  <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax" title="Copy to Clipboard" src="../icon/mail.svg" alt="LinkedIn">
-                  <p class="clickIconCopy">vickyw.design@gmail.com</p>
-                </button>
-              </div>
-              <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/in.svg" alt="LinkedIn">
-              </a>
-
-              <a target="_blank" href="https://github.com/vicky-wyq">
-                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/git.svg" alt="GitHub" title="GitHub">
-              </a>
-
-              <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/Codepen.svg" alt="CodePen">
-              </a>
-
-              <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/ins.svg" alt="Instagram" title="Instagram">
-              </a>
-            </div>
-            <div class="blankHXS"></div>
-          </div>
-          <div class="Grid-cell">
-            <div class="Grid Grid--gutters Grid--cols-6">
-              <div class="Grid-cell">
-                <h5> <strong> Project </strong> </h5>
-                <div class="blankHXXS"></div>
-                <a href="/glorify/">
-                  <h6 class="fontWeight400"> Glorify</h6>
-                </a>
 
 
-                <h6>Elevating Community Involvement</h6>
-                <div class="blankHXXS"></div>
-                <a href="/appointa/">
-                  <h6 class="fontWeight400"> APPOINTA</h6>
 
-                </a>
-                <h6>Simplifying Interview Coordination</h6>
-                <div class="blankHXXS"></div>
-                <a href="/seer/">
-                  <h6 class="fontWeight400">SEER</h6>
+  <!-- Shared across the platform -->
+  <%- include(`${templatePath}/shared/comp_textualElements_arrow`, {message: 'Skills & Experiences' }) %>
+  <%- include(`${templatePath}/shared/comp_tagCloud`) %>
+  <%- include(`${templatePath}/shared/comp_closingMessage`, { version: '', message: ''}) %>
 
-                </a>
-                <h6>Empowering Brand Managers with Insights</h6>
-              </div>
-
-              <div class="Grid-cell">
-                <h5> <strong> Service </strong> </h5>
-                <div class="blankHXXS"></div>
-
-                <a href="/">
-                  <h6 class="fontWeight400">UX/UI Design</h6>
-                </a>
-                <h6>Creating Intuitive User Experiences</h6>
-                <div class="blankHXXS"></div>
-
-                <a href="/">
-                  <h6 class="fontWeight400">Design Research</h6>
-                </a>
-                <h6>In-depth Analysis for Targeted Solutions</h6>
-                <div class="blankHXXS"></div>
-                <a href="/">
-                  <h6 class="fontWeight400">Web Development</h6>
-                </a>
-                <h6>Seamless Design Implementation</h6>
-                <div class="blankHXXS"></div>
-                <a href="/">
-                  <h6 class="fontWeight400">Branding</h6>
-                </a>
-                <h6>Crafting Memorable Brand Identities</h6>
-              </div>
-
-              <div class="Grid-cell">
-                <h5> <strong> About </strong> </h5>
-                <div class="blankHXXS"></div>
-
-                <a href="/about">
-                  <h6>About me</h6>
-                </a>
-                <a href="mailto:vickyw.design@gmail.com">
-                  <h6>Email me</h6>
-                </a>
-              </div>
-            </div>
-
-          </div>
-        </div>
-      </div>
-      <div class="blankHS"></div>
-      <div class="Grid Grid--full Grid--gutters">
-        <div class="Grid-cell">
-          <div class="footerBorder">
-            <div class="element">
-              <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </footer>
-  <!--footer-->
-
-
+  <%- include(`${templatePath}/shared/comp_backTop`) %>
+  <%- include(`${templatePath}/shared/block_nav_footer`) %>
+  <!-- Shared across the platform -->
 </body>
 
 
