about page update

--- a/templates/resume/index.ejs
+++ b/templates/resume/index.ejs
@@ -11,7 +11,7 @@
   <%- include( `${templatePath}/shared/compProgressBar`) %>
 
   <%- include(`${templatePath}/shared/block_nav_header`, { 
-    type:'backText', 
+    type:'logoText', 
     leftArrowColor:``,
     currentPage: '', 
     PageUrl:'/' }) %>
@@ -23,7 +23,7 @@
       <div class="Grid-cell">
         <div class="element">
           <a href="/resume/resume.pdf" class="textUnderline" target="”_blank”">
-            <h4>Click to Open and Download PDF Résumé</h4>
+            <h4>Click to open & download PDF resume</h4>
           </a>
         </div>
       </div>
