--- a/templates/main.css
+++ b/templates/main.css
@@ -47,7 +47,7 @@
     --Grey900: #1b1b1b;
     /*292929 2c2c2c #161616*/
 
-    --Grey800: #505050;
+    --Grey800: #2f2f2f;
     /* 5f6368 4f4f4f*/
     --Grey700: #707070;
     /* #505050 83878a 787878  757575*/
@@ -992,7 +992,7 @@ polygon {
 }
 
 .cardBorderThick {
-    border: 0.1em solid var(--Grey900);
+    border: 0.08em solid var(--Grey400);
 }
 
 .cardBorderGreen {
@@ -2014,7 +2014,7 @@ strong {
 
 a:link.textUnderline {
     text-decoration-line: underline;
-    text-decoration-thickness: 0.03em;
+    text-decoration-thickness: 0.06em;
     text-underline-offset: 6px;
     text-decoration-color: var(--Grey900);
 }
@@ -2861,6 +2861,11 @@ button.passwordArr {
 
 /* below from web 2.0*/
 @media all and (max-width: 680px) {
+    body .carouselLogoBlur {
+        .logos {
+            background: url(/about/marquee_small.svg) 0 50% / 1134px 150px repeat-x;
+        }
+    }
     body .rowToColumn {
         display: flex;
         flex-direction: column;
