--- a/templates/shared/block_nav_header.ejs
+++ b/templates/shared/block_nav_header.ejs
@@ -28,7 +28,7 @@
 <header>
   <nav class="header" id="header">
     <div class="backgroundColorNav">
-      <a href="http://vickywang.me/"><img class="logo pointer" src="<%= websitePath %>/icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
+      <a href="/"><img class="logo pointer" src="<%= websitePath %>/icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
       <div class="navbar">
         <ul class="nav-menu">
           <% for(let i = 0; i < pages.length; i++) { %>
@@ -91,7 +91,7 @@
          <h4 class="backText">BACK</h4>
         </a>
         <div class="navbar">
-          <a href="http://vickywang.me/"><img class="pointer widthXXS marginS" src="<%= websitePath %>/icon/LOGOtxtOnly.svg" alt="VW" title="vickywang.me"></a>
+          <a href="/"><img class="pointer widthXXS marginS" src="<%= websitePath %>/icon/LOGOtxtOnly.svg" alt="VW" title="vickywang.me"></a>
 
         </div>
 
@@ -103,10 +103,10 @@
     <header>
       <nav class="header" id="header">
         <div class="backgroundColorNav">
-          <a href="http://vickywang.me/"><img class="logo pointer" src="<%= websitePath %>/icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
+          <a href="/"><img class="logo pointer" src="<%= websitePath %>/icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
 
           <div class="navbar">
-            <a href="http://vickywang.me/"><img class="pointer widthXXS marginS" src="<%= websitePath %>/icon/LOGOtxtOnly.svg" alt="VW" title="vickywang.me"></a>
+            <a href="/"><img class="pointer widthXXS marginS" src="<%= websitePath %>/icon/LOGOtxtOnly.svg" alt="VW" title="vickywang.me"></a>
   
           </div>
 
@@ -117,7 +117,7 @@
     <% } else if (type === 'withDropdown') { %>
       <nav class="header" id="header">
         <div class="backgroundColorNav">
-          <a href="http://vickywang.me/"><img class="logo pointer marginS" src="<%= websitePath %>/icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
+          <a href="/"><img class="logo pointer marginS" src="<%= websitePath %>/icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
           <div class="navbar">
             <ul class="nav-menu">
               <li class="dropdown nav-item active activeNav  marginZero"><a href="/" class="nav-link box">PROJECT</a>
