--- a/templates/shared/block_cardProjects.ejs
+++ b/templates/shared/block_cardProjects.ejs
@@ -246,7 +246,7 @@
           <div class="element">
             <div class="element">
               <h5>Password is required </h5>
-              <h3 class="arrCard" data-aos="fade-up"><strong>RX Zero Savings Explorer - Cost-benefit Calculator</strong></h3>
+              <h3 class="arrCard" data-aos="fade-up"><strong>RX Zero Savings Explorer: Uncover Prescription Meds Savings</strong></h3>
               <h4>This tool enables users to compare their current medication costs with the RX Zero subscription model, offering a seamless experience that simplifies making healthcare financial decisions.</h4>
             </div>
           </div>
