--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -25,7 +25,6 @@
 <div class="wrapper">
   <div class="Grid Grid--gutters">
     <div class="Grid-cell">
-
       <div class="row">
         <div class="widthMax">
           <div class="element">
@@ -36,7 +35,6 @@
             </strong>
           </div>
         </div>
-        
         <div class="paddingleft">
           <div class="element">
             <div class="widthFitContent">
@@ -84,7 +82,7 @@
         hoverBorderColor:`BYP`,
         inputColor:`PWinput`,
         cardPwImgURL:`${websitePath}/projectImages/Cover_BYP_AppB2B_Redesign.png`,
-        cardPwTitle: `Pet B2B Booking App Revamp: The Transition from White-Glove to Self-Service`, 
+        cardPwTitle: `B2B SaaS Booking App Revamp: The Transition from White-Glove to Self-Service`, 
         cardPwDescription:`Discover how we transformed the BookYourPet app with a strategic redesign, shifting from a white-glove service to a user-friendly self-service platform. This overhaul focused on enhancing key features, resulting in a significant 45% increase in user satisfaction and a more streamlined experience for pet owners. Join us on our journey to revolutionize pet care services with a seamless and intuitive booking experience.
       ` 
         }) %>
@@ -127,7 +125,7 @@
         hoverBorderColor:`LASO`,
         inputColor:`PWinputLH`,
         cardPwImgURL:`${websitePath}/projectImages/Cover_LASO_CostCalculator.png`,
-        cardPwTitle: `RX Zero Savings Explorer - Cost-benefit Calculator`, 
+        cardPwTitle: `RX Zero Savings Explorer: Uncover Prescription Meds Savings`, 
         cardPwDescription:`This tool enables users to compare their current medication costs with the RX Zero subscription model, offering a seamless experience that simplifies making healthcare financial decisions.` 
         }) %>
       <%- include(`${templatePath}/shared/block_cardNoPassword`, {
