--- a/templates/resume/index.ejs
+++ b/templates/resume/index.ejs
@@ -19,12 +19,13 @@
   <div class="wrapper">
     <div class="blankHS"></div>
 
-    <div class="Grid Grid--gutters Grid--full u-textCenter">
+    <div class="Grid Grid--gutters Grid--full u-textCenter positionFixed">
       <div class="Grid-cell">
-        <div class="element">
-          <a href="/resume/resume.pdf" class="textUnderline" target="”_blank”">
-            <h4>Click to open & download PDF resume</h4>
-          </a>
+        <div class="element ">
+          <a  href="/resume/resume.pdf"> <button class="buttonFlip buttonResume">PDF Resume
+            </button></a>
+            <!--buttonBlack-->
+
         </div>
       </div>
     </div>
