--- a/templates/about/index.ejs
+++ b/templates/about/index.ejs
@@ -15,54 +15,86 @@
   <div class="blankHM"></div>
   <%- include(`${templatePath}/shared/base_greeting`,{greetingTxt:`👋🏻 hi there!`}) %>
 
+
   <div class="wrapper">
-    <div class="Grid Grid--gutters">
-      <div class="Grid-cell">
-        <div class="row">
-          <div class="widthMax">
-            <div class="element">
-              <strong>
-                <div class="intro aos-init aos-animate" data-aos="fade-up">
-                  <h1>I'm interested in streamlining workflows, improving business efficiency, and increasing consumer engagement. </h1>
-                </div>
-              </strong>
-            </div>
-          </div>
-          <div class="paddingleft">
-            <div class="element">
-              <div class="widthFitContent">
-                <div class="dropdownSM">
-                  <img title="Share" class="iconS hoverGrey300 paddingM borderRadiusMax dropbtn" src="/icon/share.svg" alt="Share">
-                  <div class="dropdownSM-content">
-                    <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me" target="_blank">Share
-                      on LinkedIn</a>
-                    <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me&amp;media=https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_mobile.svg&amp;description=Skilled%20UX%20Designer%20for%20B2B%20Solutions%20%26%20Consumer%20Apps%20-%20Vicky%20Wang" target="_blank">Share on Pinterest</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="wrapper">
-    <div class="Grid Grid--full Grid--gutters u-textCenter">
+    <div class="Grid Grid--gutters Grid--1of3 Grid--center">
+
       <div class="Grid-cell">
         <div class="element">
-          <img class="widthS" src="/about/me.png" alt="icon arrow">
+          <img class="" src="/about/me.png" alt="icon arrow">
 
         </div>
       </div>
-    </div>
-  </div>
-  <div class="blankHXS"></div>
-  <div class="carouselLogoBlurContainer">
-    <div class="carouselLogoBlur">
-      <div class="logos"></div>
+
+      <div class="Grid-cell">
+        <div class="element">
+          <h3>As a UX designer, I possess a diverse range of skills and have gained experience in startup environments. I am fully involved in every aspect of the design process and continuously aim to create seamless user experiences that align with business objectives. My approach emphasizes simplicity, using the fewest design elements necessary to address core issues effectively.
+          </h3>
+          <h3>My fascination with craftsmanship extends beyond just UX. It is evident both in the art of crafting user-centric interfaces and in appreciating the finer details of everyday life.
+          </h3>
+          <h3>
+            I take pleasure in immersing myself in new technologies. Doing so not only fosters smoother collaboration with developers but also deepens my understanding of design, ultimately driving productivity.
+          </h3>
+        </div>
+      </div>
     </div>
 
   </div>
+  <!-- My Journey -->
+
+  <!--Arrow subtitle-->
+  <%- include('../shared/comp_textualElements_arrow', {message: 'My Journey' }) %>
+  <!--Arrow subtitle-->
+
+
+  <div class="wrapper">
+
+    <div class="Grid Grid--full Grid--gutters">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="element">
+
+            <div class="progressStepContainer">
+              <ul class="progressX">
+                <li class="progress__item" data-aos="fade-up">
+                  <h3> <strong class="Grey700">Art - Drawing & Painting</strong> </h3>
+                  <h3>Art is my way of turning emotions and ideas into visual expression. It deepens my understanding of design and opens up new perspectives. Through color, composition, and other elements, art helps me create unique designs.
+                  </h3>
+
+                </li>
+                <div class="blankHXS"></div>
+
+                <li class="progress__item" data-aos="fade-up">
+                  <h3> <strong class="Grey700">Design - Visual & Landscape & Architecture</strong> </h3>
+                  <h3>In design, my heart lies in a vibrant creative vision that marries creativity, innovation, and precision with out-of-the-box thinking.
+                    In architecture, I focus on creating functional and visually appealing buildings that meet client' needs, balance different elements, and achieve a harmonious aesthetic.
+                  </h3>
+
+                </li>
+                <div class="blankHXS"></div>
+
+
+
+                <li class="progress__item progress__item--active" data-aos="fade-up">
+                  <h3> <strong>User Experience Design </strong> </h3>
+                  <h3>I love UX because it empowers users in the design process. My goal is always to solve problems through feedback and data analysis. The short design and development cycle in UX turns all my design dreams into reality.
+
+
+
+
+
+                  </h3>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+
+  <!-- My Journey -->
 
   <!--Arrow subtitle-->
   <%- include('../shared/comp_textualElements_arrow', {message: 'Design Process' }) %>
@@ -120,61 +152,7 @@
       </div>
     </div>
   </div>
-  <!-- My Journey -->
 
-  <!--Arrow subtitle-->
-  <%- include('../shared/comp_textualElements_arrow', {message: 'My Journey' }) %>
-  <!--Arrow subtitle-->
-
-
-  <div class="wrapper">
-
-    <div class="Grid Grid--full Grid--gutters">
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="element">
-
-            <div class="progressStepContainer">
-              <ul class="progressX">
-                <li class="progress__item" data-aos="fade-up">
-                  <h3> <strong class="Grey700">Art - Drawing & Painting</strong> </h3>
-                  <h3>Art is my way of turning emotions and ideas into visual expression. It deepens my understanding of design and opens up new perspectives. Through color, composition, and other elements, art helps me create unique designs.
-                  </h3>
-
-                </li>
-                <div class="blankHXS"></div>
-
-                <li class="progress__item" data-aos="fade-up">
-                  <h3> <strong class="Grey700">Design - Visual & Landscape & Architecture</strong> </h3>
-                  <h3>In design, my heart lies in a vibrant creative vision that marries creativity, innovation, and precision with out-of-the-box thinking.
-                    In architecture, I focus on creating functional and visually appealing buildings that meet client' needs, balance different elements, and achieve a harmonious aesthetic.
-                  </h3>
-
-                </li>
-                <div class="blankHXS"></div>
-
-
-
-                <li class="progress__item progress__item--active" data-aos="fade-up">
-                  <h3> <strong>User Experience Design </strong> </h3>
-                  <h3>I love UX because it empowers users in the design process. My goal is always to solve problems through feedback and data analysis. The short design and development cycle in UX turns all my design dreams into reality.
-
-
-
-
-
-                  </h3>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </div>
-
-
-  <!-- My Journey -->
 
 
   <!-- Shared across the platform -->
