--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -52,8 +52,52 @@
       </div>
     </div>
   </div>
-</div>
 
+  <div class="Grid Grid--gutters Grid--cols-8 u-textCenter Grid--center">
+    <div class="Grid-cell">
+      <div class="ClipboardBoxIconOnly">
+        <button class="ClipboardIconOnly">
+          <img title="Copy Email to Clipboard" class="iconM hoverGrey300 paddingMax borderRadiusMax" src="./icon/mail.svg" alt="LinkedIn">
+          <p class="clickIconCopy">vickyw.design@gmail.com</p>
+        </button>
+      </div>
+
+    </div>
+    <div class="Grid-cell">
+      <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank" title="LinkedIn">
+        <img class="iconM hoverGrey300 paddingMax borderRadiusMax borderRadiusS" src="./icon/in.svg" alt="LinkedIn">
+      </a>
+    </div>
+
+    <div class="Grid-cell">
+      <a href="https://github.com/vicky-wyq" target="_blank" title="GitHub">
+        <img class="iconM hoverGrey300 paddingMax borderRadiusMax" src="./icon/git.svg" alt="GitHub">
+      </a>
+    </div>
+    <div class="Grid-cell">
+      <a href="https://codepen.io/vicky-wyq" target="_blank" title="CodePen">
+        <img class="iconM hoverGrey300 paddingMax borderRadiusMax" src="./icon/Codepen.svg" alt="CodePen">
+      </a>
+    </div>
+    <div class="Grid-cell">
+    </div>
+    <div class="Grid-cell">
+    </div>
+    <div class="Grid-cell">
+    </div>
+    <div class="Grid-cell">
+    </div>
+    <div class="Grid-cell">
+    </div>
+    <div class="Grid-cell">
+    </div>
+    <div class="Grid-cell">
+    </div>
+    <div class="Grid-cell">
+    </div>
+  </div>
+
+</div>
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-3">
       <a href="/resume" target="_blank"> <button class="buttonLanding arrButtonResume">Resume &nbsp;
