--- a/templates/shared/block_cardNoPassword.ejs
+++ b/templates/shared/block_cardNoPassword.ejs
@@ -2,7 +2,7 @@
   <a class="no-hover-effect" href="<%= cardNoPwURL%>">
     <img src="<%= cardNoPwImgURL%>" alt="<%= cardNoPwTitle %>">
     <div class="element">
-      <h3 class="arrCard" data-aos="fade-up"><strong><%= cardNoPwTitle %></strong></h3>
+      <h3 class="arrCard"><strong><%= cardNoPwTitle %></strong></h3>
       <h4><%= cardNoPwDescription %>
       </h4>
     </div>
