--- a/templates/shared/block_nav_header.ejs
+++ b/templates/shared/block_nav_header.ejs
@@ -18,7 +18,7 @@
 <% const baseClasses = 'nav-item marginZero' %>
 <% const activeClasses = 'active activeNav' %>
 <% const inactiveClasses = 'inactive' %>
-<% const pages = ['PROJECT', 'ARCHITECTURE', 'PHOTOGRAPHY', 'BLOG', 'ABOUT'] %>
+<% const pages = ['PROJECT', 'ABOUT'] %>
 <% function capitalizeFirstLetter(word) {
     return word.charAt(0).toUpperCase() + word.slice(1);
   } %>
@@ -163,13 +163,16 @@
                 </div>
               </li>
               </li>
-      
-      
-      
+            <!-- 
               <li class="nav-item inactive marginZero"><a href="/architecture" class="nav-link box ">ARCHITECTURE</a>
               </li>
               <li class="nav-item inactive marginZero"><a href="/photography" class="nav-link box ">PHOTOGRAPHY</a>
               </li>
+             -->
+
+      
+      
+
               <li class="nav-item inactive marginZero"><a href="/blog" class="nav-link box ">BLOG</a>
               </li>
               <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box ">ABOUT</a>
