--- a/templates/about/index.ejs
+++ b/templates/about/index.ejs
@@ -35,23 +35,19 @@
           <h3>
             I take pleasure in immersing myself in new technologies. Doing so not only fosters smoother collaboration with developers but also deepens my understanding of design, ultimately driving productivity.
           </h3>
-          <div class="row">
-
-                <a href="mailto:vickyw.design@gmail.com"> <button class="buttonLanding">Email me
-                  </button></a>
-
-
-
-                <div class="ClipboardBoxIconOnly">
-                  <button class="ClipboardIconOnly">
-                    <img class="iconM hoverGrey100 paddingMax borderRadiusMax" title="Copy Email Address to Clipboard" src="/icon/copy.svg">
-                    <p class="clickIconCopy">vickyw.design@gmail.com
-                    </p>
-                  </button>
-                </div>
-
-          </div>
         </div>
+
+          <div class="row">
+            <a href="mailto:vickyw.design@gmail.com"> <button class="buttonLanding">Email me
+              </button></a>
+            <div class="ClipboardBoxIconOnly">
+              <button class="ClipboardIconOnly">
+                <img class="iconM hoverGrey100 paddingMax borderRadiusMax" title="Copy Email Address to Clipboard" src="/icon/copy.svg">
+                <p class="clickIconCopy">vickyw.design@gmail.com
+                </p>
+              </button>
+            </div>
+          </div>
       </div>
 
     </div>
@@ -82,7 +78,7 @@
                 <div class="blankHXS"></div>
 
                 <li class="progress__item" data-aos="fade-up">
-                  <h3> <strong class="Grey700"><a href="/architecture" class="textUnderline Grey700" title="Academic Projects"> Architecture Design</a> & <a href="/photography" class="textUnderline Grey700" title="Nature & Wildlife"> Photography </a></strong></h3>
+                  <h3> <strong class="Grey700"><a href="/architecture" class="textUnderline Grey700" title="Academic Projects"> Architectural Design</a> & <a href="/photography" class="textUnderline Grey700" title="Nature & Wildlife"> Photography </a></strong></h3>
                   <h3>In design, my heart lies in a vibrant creative vision that marries creativity, innovation, and precision with out-of-the-box thinking.
                     In architecture, I focus on creating functional and visually appealing buildings that meet client' needs, balance different elements, and achieve a harmonious aesthetic.
                   </h3>
@@ -109,15 +105,13 @@
     </div>
   </div>
 
+
   <div class="wrapper">
-    <div class="Grid Grid--full forFullResponsiveGrid">
+    <div class="Grid Grid--gutters Grid--full">
       <div class="Grid-cell">
-        <div class="element">
-          <a href="/resume" class="textUnderline">
-            <h3>Visit my resume page</h3>
-          </a>
+          <a href="/resume"> <button class="buttonLanding arrButton">Resume &nbsp;
+            </button></a>
         </div>
-      </div>
     </div>
   </div>
   <!-- My Journey -->
