--- a/templates/architecture/index.ejs
+++ b/templates/architecture/index.ejs
@@ -35,6 +35,24 @@
     paragraphTxt:`During my enriching three-year Master of Architecture (M.Arch) program at UC Berkeley, I engaged deeply with advanced design theories, methodologies, and hands-on practices. This portfolio highlights my exploration and mastery of architectural principles, reflecting a comprehensive approach to design. It includes projects that demonstrate my ability to blend form, spatial dynamics, materials, construction methods, social relevance, technology, and environmental sustainability, underscoring my academic journey at UC Berkeley.`
   }) %>
 
+  <div class="wrapper">
+    <div class="row">
+      <div class="element">
+        <a href="mailto:vickyw.design@gmail.com"> <button class="buttonLanding">Email me
+          </button></a>
+      </div>
+      <div class="element">
+        <div class="ClipboardBoxIconOnly">
+          <button class="ClipboardIconOnly">
+            <img class="iconM hoverGrey100 paddingMax borderRadiusMax" title="Copy Email Address to Clipboard" src="/icon/copy.svg">
+            <p class="clickIconCopy">vickyw.design@gmail.com
+            </p>
+          </button>
+        </div>
+      </div>
+
+    </div>
+  </div>
   <div class="blankHS"></div>
 
   <!-- Arrow -->
