--- a/templates/architecture/recovery_of_river_edges/index.ejs
+++ b/templates/architecture/recovery_of_river_edges/index.ejs
@@ -11,8 +11,12 @@
 
 <body>
   <%- include(`${templatePath}/shared/compProgressBar`) %>
-  <%- include(`${templatePath}/shared/block_nav_header`, {type:'main', currentPage: 'ARCHITECTURE' }) %>
-
+  <%- include(`${templatePath}/shared/block_nav_header`, {
+    type:'backText', 
+    leftArrowColor:``,
+    currentPage: 'ARCHITECTURE',
+    PageUrl:`/architecture`
+    }) %>
 
   <div class="blankHL"></div>
 
