--- a/templates/architecture/recreation_commons/index.ejs
+++ b/templates/architecture/recreation_commons/index.ejs
@@ -11,7 +11,15 @@
 
 <body>
   <%- include(`${templatePath}/shared/compProgressBar`) %>
-  <%- include(`${templatePath}/shared/block_nav_header`, {type:'main', currentPage: 'ARCHITECTURE' }) %>
+
+
+
+  <%- include(`${templatePath}/shared/block_nav_header`, {
+    type:'backText', 
+    leftArrowColor:``,
+    currentPage: 'ARCHITECTURE',
+    PageUrl:`/architecture`
+    }) %>
   <div class="blankHL"></div>
 
 
