--- a/templates/architecture/the_rotation_of_curves/index.ejs
+++ b/templates/architecture/the_rotation_of_curves/index.ejs
@@ -9,7 +9,12 @@
 
 <body>
   <%- include(`${templatePath}/shared/compProgressBar`) %>
-  <%- include(`${templatePath}/shared/block_nav_header`, {type:'main', currentPage: 'ARCHITECTURE' }) %>
+  <%- include(`${templatePath}/shared/block_nav_header`, {
+    type:'backText', 
+    leftArrowColor:``,
+    currentPage: 'ARCHITECTURE',
+    PageUrl:`/architecture`
+    }) %>
   <div class="blankHL"></div>
 
   <!-- cover -->
