--- a/templates/architecture/thesis_studio/index.ejs
+++ b/templates/architecture/thesis_studio/index.ejs
@@ -11,7 +11,13 @@
 
 <body>
   <%- include(`${templatePath}/shared/compProgressBar`) %>
-  <%- include(`${templatePath}/shared/block_nav_header`, {type:'main', currentPage: 'ARCHITECTURE' }) %>
+  <%- include(`${templatePath}/shared/block_nav_header`, {
+    type:'backText', 
+    leftArrowColor:``,
+    currentPage: 'ARCHITECTURE',
+    PageUrl:`/architecture`
+    }) %>
+
   <div class="blankHXL"></div>
 
 
