--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <!--Head-->
-<%- include(`${templatePath}/shared/head`, {SEO:true, Title:'Innovative UX Designer Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang', 
-  description:'Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.', 
+<%- include(`${templatePath}/shared/head`, {SEO:true, Title:'Creative UX Designer Focused on Streamlining Workflows - Vicky Wang', 
+  description:'Specializing in crafting seamless user experiences for B2B SaaS and consumer applications, Vicky Wang transforms complexity into user-friendly solutions.', 
   pageURL:'', thumbnailImgURL: 'vickywang_web.png'
   }) %>
 <!--Head-->
