--- a/html/main.css
+++ b/html/main.css
@@ -5680,11 +5680,14 @@ button.Clipboard.clickTxt:active {
 /* ===== Cloud tags ====== */
 
 .tags {
+        /* ===== 22 32 38 ====== */
+        /* ===== 32 ====== */
+
     position: relative;
-    top: calc(50% - 16vmin);
-    left: calc(50% - 16vmin);
-    height: 32vmin;
-    width: 32vmin;
+    top: calc(50% - 24vmin);
+    left: calc(50% - 24vmin);
+    height: 40vmin;
+    width: 40vmin;
     list-style: none;
     opacity: 0;
     user-select: none;
@@ -5698,7 +5701,7 @@ button.Clipboard.clickTxt:active {
     position: absolute;
     top: 50%;
     left: 50%;
-    font-size: 1.6vmin;
+    font-size: 2.2vmin;
     line-height: 2.0vmin;
     font-family: inherit;
     font-weight: 500;
