--- a/templates/about/index.ejs
+++ b/templates/about/index.ejs
@@ -158,7 +158,16 @@
         </div>
       </div>
     </div>
+    <div class="blankHXS"></div>
 
+    <div class="carouselLogoBlurContainer">
+
+      <div class="carouselLogoBlur">
+        <div class="logos"></div>
+      </div>
+  
+    </div>
+    <div class="blankHS"></div>
 
   </div>
 
