--- a/templates/resume/index.ejs
+++ b/templates/resume/index.ejs
@@ -153,7 +153,7 @@
           <div class="Grid-cell">
             <div class="element">
               <h3><strong class="colorVW"> EXPERIENCE</strong></h3>
-              <h5><strong>BookYourPet | UI/UX Designer </strong></h5>
+              <h5><strong>BookYourPet | User Experience Designer </strong></h5>
               <h6 class="textItalic">Oct. 2021 - Present, Full-time Contractor</h6>
               <div class="blankHXXS"></div>
 
