--- a/ejs_literals/block_nav_header.ejs
+++ b/ejs_literals/block_nav_header.ejs
@@ -9,7 +9,7 @@
 
 <!-- Back + Text -->
 <%- include(`${templatePath}/shared/block_nav_header`, {
-    type:'Back with Menu', 
+    type:'back', 
     currentPage: '',
     PageUrl:`${websitePath}` 
     }) %>
